--- a/css/styleSheet.css
+++ b/css/styleSheet.css
@@ -14,6 +14,15 @@ html {
   top: 0;
 }
 
+.text-select-none{
+  -webkit-user-select: none;
+-khtml-user-select: none;
+-moz-user-select: none;
+-ms-user-select: none;
+-o-user-select: none;
+user-select: none;
+}
+
 body {
   background: linear-gradient(
       0deg,
